[package]
name = "rust-hello-world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0"
fcm = "0.9.2"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0.0", features = ["full"] }
uuid = { version = "1.3.2", features = ["serde", "v4"]}
